booksky updated its button format

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Booksky</title>
     <link rel="stylesheet" href="style.css">
     <!-- google font kittan -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">     
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@300;400;500;600;700&family=Story+Script&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -18,9 +18,9 @@
 
     <div class="container">
         <div class="book-container">
-            <h2>Book name</h2>
-            <h5>Author name</h5>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur vitae quae veritatis quasi asperiores provident harum  </p>
+            <h2>War and Peace</h2>
+            <h4>Leo Tolstoy</h4>
+            <p>War and Peace is a literary work by the Russian author Leo Tolstoy. Set during the Napoleonic Wars, the work comprises both a fictional narrative and chapters in which Tolstoy discusses history and philosophy.</p>
             <button onclick="deletebook(event)">Delete</button>
         </div>
 
